# Rakurai-Engine

./: .gitignore  CMakeLists.txt  Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Makefile  Model.cpp  Model.h  MovementController.cpp  README.md  Renderer.cpp  Renderer.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  SwapChain.cpp  SwapChain.h  TestApp.cpp  TestApp.h  Utils.h  Window.cpp  Window.h  build.sh  run.sh
shaders/: BillboardShader.frag  BillboardShader.vert  SimpleShader.frag  SimpleShader.vert
src/: Camera.cpp  Camera.h  Descriptors.cpp  Descriptors.h  GameObject.cpp  GameObject.h  GraphicsBuffer.cpp  GraphicsBuffer.h  GraphicsCommands.cpp  GraphicsCommands.h  GraphicsDevice.cpp  GraphicsDevice.h  GraphicsImage.cpp  GraphicsImage.h  GraphicsImageView.cpp  GraphicsImageView.h  GraphicsPipeline.cpp  GraphicsPipeline.h  Image.cpp  Image.h  ImageView.cpp  ImageView.h  Model.cpp  Model.h  MovementController.cpp  MovementController.h  RenderSystem.h  Renderer.cpp  Renderer.h  ResourceBinder.cpp  ResourceBinder.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h  SwapChain.cpp  SwapChain.h  TestApp.cpp  TestApp.h  Texture.cpp  Texture.h  Utils.h  (+3 more)
src/RenderingSystems/: BillboardRenderSystem.cpp  BillboardRenderSystem.h  DefaultRenderSystem.cpp  DefaultRenderSystem.h  SimpleRenderSystem.cpp  SimpleRenderSystem.h
